Fix header background color on mobile
Fixes #253

--- a/src/sass/components/_responsive.scss
+++ b/src/sass/components/_responsive.scss
@@ -40,6 +40,8 @@ body {
     }
 
     #header {
+      background-color: $header-bg;
+
       #project-jump {
         padding: 0 $responsive-header-height 0 0;
 
